# rpi_cat_behaviour_monitoring

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  camera.py  capture.py  coco128.yaml  coco128_head_pruned.yaml  coco4000.yaml  coco4000_nolarge.yaml  coco4000_nolarge_subclass.yaml  coco4000_nolarge_subclass_downsample.yaml  coco_head_pruned.yaml  coco_nolarge.yaml  coco_nolarge_subclass_downsample.yaml  config.py  monitoring.py  processing.py  pyproject.toml  settings.toml  settings_mac.toml  settings_pi.toml  shared.py  swap_memory_mwe_pytorch.ipynb  utils.py  yolo11n_quantised.onnx  yolo26n_quantised.onnx  yolov8n_pruned_integer_quant.tflite  yolov8n_quantised.onnx
datasets/: coco.yaml  coco4000.yaml  coco4000_downsample.yaml  coco4000_downsample_finetune.yaml  coco4000_downsample_subclass.yaml  coco4000_subclass_downsample.yaml  coco4000_subclass_downsample_finetune.yaml  coco_downsample.yaml  coco_downsample_finetune.yaml  coco_downsample_subclass.yaml  coco_nolarge_subclass.yaml  coco_subclass_downsample.yaml  coco_subclass_downsample_finetune.yaml
notebooks/: _train_epoch_worker.py  app_development.ipynb  benchmark.py  dataset_prep.ipynb  demo_train.ipynb  detection_model.ipynb  finetune_dataset_creation.ipynb  log_analysis.ipynb
src/: app.py  camera.py  capture.py  monitoring.py  processing.py  settings.toml  shared.py  utils.py
swap_memory_mwe/: pytorch.ipynb  ultralytics.ipynb
yolo26n_subclass_ncnn_model/: metadata.yaml  model_ncnn.py
