[project]
name = "rpi-cat-behaviour-monitoring"
version = "0.1.0"
description = "Raspberry Pi app to monitor cats with live video feed and identify poor behaviour"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dynaconf>=3.2.12",
]

[dependency-groups]
dev = [
    "black[jupyter]==25.12.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "isort==7.0.0",
    "jupyter>=1.1.1",
    "mypy==1.19.1",
    "onnxruntime>=1.23.2",
    "onnxruntime-tools>=1.7.0",
    "onnxslim>=0.1.80",
    "onnxruntime>=1.23.2",
    "onnxruntime-tools>=1.7.0",
    "onnxslim>=0.1.80",
    "pandas>=2.3.3",
    "pre-commit==4.5.0",
    "pycocotools>=2.0.11",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.239",
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
strict_optional = false
files = '.'
