[project]
name = "rpi-cat-behaviour-monitoring"
version = "0.1.0"
description = "Raspberry Pi app to monitor cats with live video feed and identify poor behaviour"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ai-edge-litert>=1.2.0,<1.4.0",
    "dynaconf>=3.2.12",
    "ultralytics>=8.3.239",
]

[dependency-groups]
dev = [
    "black[jupyter]==25.12.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "isort==7.0.0",
    "jupyter>=1.1.1",
    "mypy==1.19.1",
    "onnx2tf>=1.26.3",
    "onnx-graphsurgeon>=0.3.26",
    "pandas>=2.3.3",
    "pre-commit==4.5.0",
    "pycocotools>=2.0.11",
    "seaborn>=0.13.2",
    "sng4onnx>=1.0.1",
    "tensorflow>=2.0.0,<=2.19.0",
    "tf-keras<=2.19.0",
    "tqdm>=4.67.1",
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
strict_optional = false
files = '.'
