[project]
name = "rpi-cat-behaviour-monitoring"
version = "0.1.0"
description = "Raspberry Pi app to monitor cats with live video feed and identify poor behaviour"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dynaconf>=3.2.12",
    "ncnn>=1.0.20260114",
    "ultralytics>=8.4.0",
]

[dependency-groups]
dev = [
    "black[jupyter]==25.12.0",
    "executorch>=1.1.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "isort==7.0.0",
    "jupyter>=1.1.1",
    "mnn>=3.4.1",
    "mypy==1.19.1",
    "pandas>=2.3.3",
    "pnnx>=20260112",
    "pre-commit==4.5.0",
    "pycocotools>=2.0.11",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
strict_optional = false
files = 'src'
